fix page header title width overflow

--- a/src/main/webapp/resources/scss/main.scss
+++ b/src/main/webapp/resources/scss/main.scss
@@ -54,10 +54,9 @@ header{
     
     #page-header-title {
         color: white;
-        position: absolute;
         top: 0px;
         left: 0px;
-        width: 100%;
+        display: block;
         font-weight: 100;
         text-align: center;
         font-size: x-large;
